--- a/dmm/src/main/resources/static/scss/dmmapp.scss
+++ b/dmm/src/main/resources/static/scss/dmmapp.scss
@@ -107,7 +107,6 @@
   width: 150px;
 }
 
-
 .facility .btn-default{
   width: 140px;
 }
@@ -130,9 +129,14 @@
   font-weight: bold;
 }
 
+.shady-container{
+  height: 60px;
+  margin-top: -15px;
+}
 .container2{
   background: #b1d1e3;
   padding-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .clear{
@@ -154,10 +158,15 @@
 
 .pds-icon{
   padding-top: 5px ;
-
   border-radius: 50%;
-
-  background: #eeeaea;
+  background: #c5e2f1;
+  color: rgba(245, 245, 245, 0.92);
+  border: 2px solid rgba(245, 245, 245, 0.85);
+  height: 15px;
+  width: 15px;
+  margin: 5px;
+  padding-bottom: 5px;
+  text-align: center;
 }
 .dmmapp{
   width: 1000px;
@@ -181,4 +190,23 @@ header{
 .btn-primary{
   line-height: 25px;
   border-radius: 8px;
+}
+
+.ag-grid-table-outer{
+  margin-top: -30px;
+}
+
+.pds-callout{
+  background: #d9edf7;
+  height: 70px;
+}
+
+.pds-callout__body{
+  margin-top: -13px;
+  line-height: 10px;
+  height: 20px;
+}
+
+.pds-callout__dismiss{
+  padding: -0px;
 }
