--- a/dmm/src/main/resources/static/scss/dmmapp.scss
+++ b/dmm/src/main/resources/static/scss/dmmapp.scss
@@ -358,23 +358,31 @@ header{
   color: black;
 }
 
-.infoClose{
-  float: right;
-}
-.infoClose .pds-icon{
-  min-width: 1.25em;
-  position: relative;
-  bottom: 51px;
-  right: 4px;
-  color: white;
-  border: 2px solid #f0f0f0;
-  border-radius: 30px;
-}
+//.infoClose{
+//  float: right;
+//}
+//.infoClose .pds-icon{
+//  min-width: 1.25em;
+//  position: relative;
+//  bottom: 51px;
+//  right: 4px;
+//  color: white;
+//  border: 2px solid #f0f0f0;
+//  border-radius: 30px;
+//}
 
 .infoClose .pds-button{
-  background: transparent;
-  border: none;
+  position: relative;
+  left: 920px;
+  top: -55px;
+  color: #f8f6f6;
+  border: 2px double #f8f6f6;
+  border-radius: 70px;
+  font-size: 20px;
+  font-weight: bolder;
+  padding: -0px;
 }
+
 
 .pds-button--ghost{
   background: transparent;
