AB#1107325 Landing page and view implementation

--- a/dmm/src/main/resources/static/scss/dmmapp.scss
+++ b/dmm/src/main/resources/static/scss/dmmapp.scss
@@ -38,6 +38,8 @@
 .breadcrumbs ul a{
   color: white;
 }
+
+
 .view-title h2{
   font-size: 22px;
 }
@@ -72,7 +74,8 @@
 .orgFilter .prompt-orgFilter{
   position: relative;
   left: -130px;
-  font-size: small;
+  font-size: 14px;
+  margin-left: -11px;
 }
 
 .orgFilter .btn-default{
