--- a/dmm/src/main/resources/static/scss/dmmapp.scss
+++ b/dmm/src/main/resources/static/scss/dmmapp.scss
@@ -12,34 +12,102 @@
   margin-bottom: 10px;
 }
 
-.pds-callout--error{
+.helpIcon{
+  float: right;
+}
+
+.helpIcon .pds-icon{
+  background:rgb(0, 136, 204) ;
+  color: white;
+  border: 2px double white;
+  border-radius: 100%;
+  font-size: medium;
+  padding: -0px;
+  margin: 8px 0px 5px 4px;
+}
+.helpIcon .pds-button{
   position: relative;
-  bottom: 27px;
-  margin-bottom: -30px;
+  right: 15px;
+  bottom: 15px;
+}
+.view-title{
+  width: 350px;
 }
 
-.pds-callout__body{
+.breadcrumbs ul,
+.breadcrumbs ul a{
+  color: white;
+}
+.view-title h2{
+  font-size: 22px;
+}
+.container1{
+  float: right;
+  width: 600px;
+  height: 40px;
   color: black;
-  font-size: 15px;
+  //border: 1px solid black;
+  position: absolute;
+  top: 130px;
+  left: 560px;
+  margin-bottom: 30px;
+  padding-top: 20px;
 }
 
-.fireball-widget > .begin{
-  background: rgb(188, 232, 241);
-  height: 80px;
+.parentHealthSystem {
+  float:right;
+  color: black;
+  font-size: small;
+  padding-right: 12px;
+  width: 200px;
+  padding-top: 4px;
 }
+
+.orgFilter{
+  float: right;
+  width: 250px;
+  padding-left: 5px;
+}
+
+.orgFilter .prompt-orgFilter{
+  position: relative;
+  left: -130px;
+  font-size: 14px;
+  margin-left: -11px;
+}
+
+.orgFilter .btn-default{
+  width: 270px;
+  position: relative;
+  top: -27px;
+}
+.help{
+  float: right;
+  margin-left: -10px;
+  position: relative;
+  right: 10px;
+}
+//s-callout--error{
+//  position: relative;
+//  bottom: 27px;
+//  margin-bottom: -30px;
+//}
+
+//.pds-callout__body{
+//  color: black;
+//  font-size: 15px;
+//}
 
 .button-label{
   //color: blue;
-  font-size: 17px;
+  font-size: 14px;
+  font-weight: 500;
 }
 
-.help{
-  margin-left: 10px;
-}
 .managedFacilitiesList{
   float: left;
   color: white;
-  margin-top: 10px ;
+  margin: 14px 10px;
   font-size: large;
   font-weight: 600;
   padding-left: 5px;
@@ -47,49 +115,63 @@
 
 .showFacilitiesWithoutMarkup{
   float: right;
-  margin: 10px;
+  margin: 18px 4px;
   width: fit-content;
   color: white;
   font-weight: 600;
+  font-size: small;
 }
 
 .showFacilitiesWithoutMarkup span.button-label{
   color:white;
+  //text-decoration: underline;
+  line-height: 30px;
 }
-
+.showFacilitiesWithoutMarkup span.button-label:hover{
+  text-decoration: underline;
+}
 .createMarkup span.button-label{
-  color: black;
+  color: #4e4545;
 }
 
+.createMarkup .button-label{
+  margin-right: -15px;
+}
 .showFilters span.button-label{
-  color: black;
+  color: #4e4545;
 }
 .createMarkup{
   float: right;
-  margin: 10px;
+  margin: 18px 0px;
   background: linear-gradient(rgb(255, 255, 255) 0%, rgb(206, 209, 214) 100%);
   border: 1px solid white;
   border-radius: 2px;
   color:white ;
 }
 
+.createMarkup .button-default{
+  width: 160px;
+  text-align: center;
+  padding-right: 15px;
+}
 .showFilters{
   float: right;
-  margin: 10px;
+  margin: 18px 8px;
   background: linear-gradient(rgb(255, 255, 255) 0%, rgb(206, 209, 214) 100%);
   border: 1px solid white;
   border-radius: 2px;
-  padding: 0px 5px;
+  padding: 1px 0px 2px 12px;
   width: 103px;
 }
 
 .hideFilters{
   float: right;
-  margin: 10px;
+  margin: 18px 8px;
   background: linear-gradient(rgb(255, 255, 255) 0%, rgb(206, 209, 214) 100%);
   border: 1px solid white;
   border-radius: 2px;
   padding-left: 10px;
+  padding-bottom: 3px;
   width: 103px;
 }
 .entityCode{
@@ -107,7 +189,6 @@
   width: 150px;
 }
 
-
 .facility .btn-default{
   width: 140px;
 }
@@ -121,18 +202,29 @@
 }
 .simpleContainer{
   background: #3896ce;
-  height: max-content;
+
+}
+.simpleContainer .shady-Container{
+  position: relative;
+  top: -3px;
 }
 
-.pds-text{
+.managedFacilitiesList .pds-text{
   color: white;
   font-size: 25px;
   font-weight: bold;
 }
 
+.shady-container{
+  height: 60px;
+  margin-top: -15px;
+}
 .container2{
   background: #b1d1e3;
   padding-bottom: 5px;
+  margin-bottom: 5px;
+  position: relative;
+  top: -26px;
 }
 
 .clear{
@@ -152,21 +244,19 @@
   width: 50px;
 }
 
-.pds-icon{
-  padding-top: 5px ;
 
-  border-radius: 50%;
-
-  background: #eeeaea;
-}
 .dmmapp{
   width: 1000px;
 }
 
 .fireball-container{
   background: #116CB3;
+  padding-top: 35px;
 }
 
+.landing .dmmapp{
+  margin-top: 50px;
+}
 .pds-frame__content{
   background: #116CB3;
 }
@@ -176,9 +266,294 @@ header{
   font-weight: 700;
   font-size: xx-large;
   color: black;
+  line-height: 30px;
 }
 
 .btn-primary{
   line-height: 25px;
   border-radius: 8px;
+}
+
+.ag-grid-table-outer{
+  margin-top: -30px;
+}
+
+.pds-callout{
+  background: #d9edf7;
+  height: 70px;
+}
+
+.pds-callout__body{
+  margin-top: -13px;
+  line-height: 10px;
+  height: 20px;
+}
+
+.pds-callout__dismiss{
+  padding: -0px;
+}
+
+.glyphicon-plus{
+  line-height: 1.4;
+  padding: 1px 2px 4px 3.5px;
+  background: #5ecb5e;
+  border-radius: 50%;
+  height: 14px;
+  width: 14px;
+  font-size: xx-small;
+  //padding: 1px 2px 4px 3px;
+  margin: 5px -18px 9px 8px;
+
+}
+
+.ag-header-cell{
+  background: rgb(197, 197, 197);
+}
+
+.breadcrumb-container{
+  margin-top: -45px;
+}
+
+.app-wrapper .dmmapp{
+  margin: 55px auto;
+  background: #fdfdec;
+  height: 2000px;
+}
+
+.pds-header__branding-title{
+  color: black;
+  padding-left: 200px;
+}
+
+.info{
+  float: right;
+  position: absolute;
+  left: 35px;
+  top: 18px;
+}
+.infoContainer{
+  float: right;
+}
+.infoIcon .pds-icon{
+  color: white;
+  background: rgb(66, 178, 234);
+  border-radius: 30px;
+  padding: 2px;
+  border: 1px solid white;
+  margin-top: -8px;
+}
+.managedFacilitiesListGrid{
+  position: relative;
+  bottom: 15px;
+}
+.infoContainer .shady-container{
+  border: 1px solid black;
+  position: relative;
+  top: 15px;
+  width: 960px;
+  background: #BCE8F1;
+  border-radius: 5px;
+  padding-top: 16px;
+}
+.infoContainer .pds-text{
+  color: black;
+}
+
+.infoClose{
+  float: right;
+}
+.infoClose .pds-icon{
+  min-width: 1.25em;
+  position: relative;
+  bottom: 51px;
+  right: 4px;
+  color: white;
+  border: 2px solid #f0f0f0;
+  border-radius: 30px;
+}
+
+.infoClose .pds-button{
+  background: transparent;
+  border: none;
+}
+
+.pds-button--ghost{
+  background: transparent;
+  border: none;
+}
+.top-box h2{
+  padding-top: 7px;
+}
+
+.ag-table-grid-container .ag-grid-table-outer{
+  margin-top: 1px;
+}
+.withoutMarkupContainer{
+  background: #3896ce;
+  height: max-content;
+
+}
+.createNewMkupButton{
+  float: right;
+  margin: 10px;
+  background: linear-gradient(rgb(255, 255, 255) 0%, rgb(206, 209, 214) 100%);
+  border: 1px solid white;
+  border-radius: 2px;
+  color:white ;
+  margin-right: 0px;
+  height: 30px;
+  margin-top: 15px;
+}
+
+.managedFacilitiesButton {
+  float:right;
+  margin: 10px;
+  width: fit-content;
+  color: white;
+  margin-right: 0px;
+  margin-top: 15px;
+}
+.managedFacilitiesButton span.button-label{
+  color:white;
+  font-size: 13px;
+  font-weight: 600;
+}
+.managedFacilitiesButton span.button-label:hover{
+  text-decoration: underline;
+}
+.showHideButton {
+  float: right;
+  margin: 10px;
+  background: linear-gradient(rgb(255, 255, 255) 0%, rgb(206, 209, 214) 100%);
+  border: 1px solid white;
+  border-radius: 2px;
+  padding-left: 10px;
+  width: 100px;
+  height: 30px;
+  margin-top: 15px;
+}
+.hideButton{
+  float: right;
+  margin: 10px;
+  background: linear-gradient(rgb(255, 255, 255) 0%, rgb(206, 209, 214) 100%);
+  border: 1px solid white;
+  border-radius: 2px;
+  padding-left: 10px;
+  width: 100px;
+  height: 30px;
+  margin-top: 15px;
+}
+
+.createNewMkupButton span.button-label{
+  color: black;
+  font-size: 13px;
+  font-weight: normal;
+  padding-left: 4px;
+}
+//.createNewMkupButton .button-icon{
+//  padding-top: 2px;
+//  padding-left: 3px;
+//  padding-right: 0px;
+//}
+.createNewMkupButton .glyphicon-plus{
+  line-height: 1.4;
+  padding: 1px 3px 4px 3.5px;
+  background: #5ecb5e;
+  border-radius: 50%;
+  height: 14px;
+  width: 14px;
+  font-size: xx-small;
+  //padding: 1px 2px 4px 3px;
+  margin: 5px 0px 9px 8px;
+
+}
+.showHideButton span.button-label{
+  color: black;
+  font-size: 14px;
+  font-weight: normal;
+  padding-left: 5px;
+}
+.hideButton span.button-label{
+  color: black;
+  font-size: 14px;
+  font-weight: normal;
+  padding-left: 5px;
+}
+
+.facilitiesListLabel{
+  float: left;
+  color: white;
+  margin-top: 8px ;
+  padding-left: 5px;
+  display: inline;
+  position: relative;
+
+}
+.facilitiesListLabel .pds-text{
+  font-size: 22px;
+  font-weight: 500;
+  padding-top: 5px;
+}
+.newMkupGrid {
+  margin-top: -18px;
+}
+
+.newMkupGrid .btn-primary{
+  float: right !important;
+  margin-right: 20px;
+  margin-top: 4px;
+  width: 135px;
+}
+
+.newMkupGrid .ag-header-container [col-id = 'entity_code']{
+  width: 120px !important;
+  background-color: rgb(197, 197, 197);
+}
+.newMkupGrid .ag-header-container [col-id = 'facility']{
+  left: 130px !important;
+  width: 800px !important;
+  background-color: rgb(197, 197, 197);
+}
+.newMkupGrid .ag-header-container{
+  background-color: rgb(197, 197, 197);
+  font-size: 15px;
+  font-family: sans-serif;
+}
+.newMkupGrid .ag-center-cols-container [col-id = 'entity_code'] {
+  background-color: #f7f7f7;
+}
+.newMkupGrid .ag-center-cols-container [col-id = 'facility']{
+  left: 130px !important;
+  width: 800px !important;
+  background-color: #efefef;
+}
+.newMkupGrid .ag-center-cols-container [col-id = 'newMarkupBtn']{
+  background-color: #efefef;
+}
+
+.newMkupGrid .ag-header-cell-resize {
+  display: none;
+}
+
+.filtersContainer{
+  background: #b1d1e3;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  position: relative;
+  top: -26px;
+  margin-top: 5px;
+}
+.filtersContainer .entityCode{
+  padding-top:10px;
+}
+.filtersContainer .filterButton{
+  padding-top: 0px;
+  height: 25px;
+  margin-top: 35px;
+}
+.filtersContainer .facility{
+  padding-top:10px;
+}
+.filtersContainer .clear{
+  padding-top:10px;
 }
